# image-processor

./: CMakeLists.txt  Libraries.h  README.md  image_processor.cpp
Filter_Controller/: filter_controller.cpp  filter_controller.h
Filters/: basicfilter.h  crop.cpp  crop.h  gauss.cpp  gauss.h  grayscale.cpp  grayscale.h  negative.cpp  negative.h  sepia.cpp  sepia.h
Filters/MatrixFilter/: edge.cpp  edge.h  matrixfilter.cpp  matrixfilter.h  sharp.cpp  sharp.h
Image/: color.cpp  color.h  image.cpp  image.h
Parsing/: parser.cpp  parser.h
Reading_And_Writing/: reader.cpp  reader_and_writer.h  writer.cpp
